--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- title section -->
     <div id='title' class="container my-2">
-        <div class="row text-white">
+        <div class="row text-primary">
             <h5>長さ計算表</h2>
                 <h6>個品設計　変化点気づきシート　～ホース設計検討</h3>
         </div>
@@ -49,13 +49,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <h6 class="text-white">図面座標値(入力用)</h6>
+                <h6 class="text-primary">図面座標値(入力用)</h6>
                 <div id="input"></div>
             </div>
             <div class="col-md-9">
-                <h6 class="text-white">0点座標値</h6>
+                <h6 class="text-primary">0点座標値</h6>
                 <div class="mb-3" id="coord1"></div>
-                <h6 class="text-white mt-4">計算中間値</h6>
+                <h6 class="text-primary mt-4">計算中間値</h6>
                 <div id="coord2"></div>
             </div>
         </div>
@@ -66,7 +66,7 @@
     <div class="container my-3">
         <div class="row">
             <div class="col-md-3">
-                <h6 class="text-white">成形性判定</h6>
+                <h6 class="text-primary">成形性判定</h6>
                 <div class="input-group input-group-sm mb-2">
                     <label class="input-group-text" for="inputGroupSelect01">品種</label>
                     <select class="form-select" id="inputGroupSelect01">
@@ -89,11 +89,11 @@
                 <div id="judge"></div>
             </div>
             <div class="col-md-5">
-                <h6 class="text-white">3D形状</h6>
+                <h6 class="text-primary">3D形状</h6>
                 <div id="shape"></div>
             </div>
             <div class="col-md-4">
-                <h6 class="text-white">計算中間値説明</h6>
+                <h6 class="text-primary">計算中間値説明</h6>
                 <img src="./hose.png" alt="explanation">
             </div>
         </div>
